Revision history for Perl extension Text-Markup.

0.30

0.25  2023-09-04T22:20:13Z
    - Fixed the importation of Pod::Simple::XHTML, Text::Trac, Text::Textile,
      and Text::MediawikiFormat to use the correct syntax for requiring a
      minimum version. Thanks to Graham Knop for the PR (#27)!
    - Fixed a reStructuredText test failure on newer versions of `docutils`.
    - Moved development test dependencies from recommended prereqs to
      development prereqs.
    - Increased the minimum required Module::Build version to 0.4209.
    - Added GitHub Workflows for testing and releasing and removed Travis
      testing. Test on Perl 5.8 - 5.38 on Linux, macOS, an Windows.
    - Fixed bugs executing Rest and Asciidoc on Windows.
    - Updated Asciidoc ot find `asciidoc.bat` and `asciidoc.exe` on Windows.

0.24  2019-12-12T00:53:25Z
     - Added missing `<head>` tag to all output. Thanks to Axel Beckert for
       the pull request (#16, #18)!
     - Added the `format_matchers` class method, which returns a list of
       formats and the regular expressions that match them.
     - Added `use warnings;` to all modules, thanks to a patch from John SJ
       Anderson (#22).
     - Added support for a `--raw` option to the markup modules for which it
       makes sense. This option allows markup to be output without wrapping it
       in a minimal HTML skeleton. Thanks to John SJ Anderson for the patch
       (#2, #24)!
     - Ported reST to Python 3. Thanks to gregor herrmann for the PR (#26).

0.23  2015-05-21T06:23:35Z
     - Added BBcode and Creole to the module description.
     - Fixed a failing test for the Mediawiki format due to a change in CGI
       v4.14. This reverses the workaround required by CGI 4.11, introduced in
       v0.20. Not that you care. It's just a test change.
     - Updated the Pod parser to determine the indentation of verbatim blocks
       by the line with the shortest leading whitespace, rather than the