@@ -1,0 +1,27 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+<div class="paragraph">
+<p>start paragraph</p>
+</div>
+<div class="paragraph">
+<p>another paragraph</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>list of things with <a href="https://www.jerakeen.org">ürls</a> in</p>
+</li>
+<li>
+<p>more things in the list</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>a <a href="https://bare.url.here" class="bare">https://bare.url.here</a>. and an <a href="mailto:email@address.com">email@address.com</a></p>
+</div>
+
+</body>
+</html>
